--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 plugins {
     id 'java'
     id 'jacoco'
-    //id "org.sonarqube" version "3.4.0.2513"
+    id "org.sonarqube" version "3.4.0.2513"
 
 }
 
